[package]
name = "mpvipc"
version = "1.1.9"
authors = ["Jonas Frei <freijon@pm.me>"]
description = "A small library which provides bindings to control existing mpv instances through sockets."
license = "GPL-3.0"
homepage = "https://gitlab.com/mpv-ipc/mpvipc"
repository = "https://gitlab.com/mpv-ipc/mpvipc"
documentation = "https://docs.rs/mpvipc/"
edition = "2018"

[dependencies]
serde = {version="1.0.1", features=["derive"]}
serde_json = "1.0.0"
log = "0.4.6"
tokio = { version = "1.12.0", features = ["full"] }
async-trait = "0.1.51"
tracing-subscriber = "0.2.25"

[dev-dependencies]
env_logger = "0.9.0"
